--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,6 +75,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Build and Test
         run: ci/x86_64-macos-release.sh
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: zig
+          path: stage3/bin/zig
+          retention-days: 7
   aarch64-macos-debug:
     runs-on: [self-hosted, macOS, aarch64]
     env:
@@ -84,6 +90,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Build and Test
         run: ci/aarch64-macos-debug.sh
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: zig
+          path: stage3-release/bin/zig
+          retention-days: 7        
   aarch64-macos-release:
     runs-on: [self-hosted, macOS, aarch64]
     env:
