--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,7 +79,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: zig
-          path: stage3/bin/zig
+          path: /Users/runner/work/zig/zig/stage3/bin/zig
           retention-days: 7
   aarch64-macos-debug:
     runs-on: [self-hosted, macOS, aarch64]
@@ -90,14 +90,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Build and Test
         run: ci/aarch64-macos-debug.sh
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: zig
-          path: stage3-release/bin/zig
-          retention-days: 7        
   aarch64-macos-release:
-    runs-on: [self-hosted, macOS, aarch64]
+    runs-on: "macos-14"
     env:
       ARCH: "aarch64"
     steps:
@@ -105,6 +99,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Build and Test
         run: ci/aarch64-macos-release.sh
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: zig
+          path: /Users/runner/work/zig/zig/stage3-release/bin/zig
+          retention-days: 7        
   x86_64-windows-debug:
     timeout-minutes: 420
     runs-on: [self-hosted, Windows, x86_64]
