--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,7 +78,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: zig
+          name: zig-x86_64-macos-release
           path: /Users/runner/work/zig/zig/build/stage3/bin/zig
           retention-days: 7
   aarch64-macos-debug:
